# tastify

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  package-lock.json  requirements.txt  rxconfig.py
back/: Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  app.py  consts.py  docker-compose.yaml  entrypoint.py  games.yaml  main.py  pyproject.toml  requirements-test.txt  requirements.txt  spotify.py
back/db/: base.py  query_utils.py  utils.py
back/migrations/: env.py
back/migrations/versions/: 001_initial.py  002_add_updated_at_to_rooms.py  003_add_abandoned_room_status.py  004_add_game_type_to_rooms.py
back/server/: app.py
back/server/routes/: __init__.py  depricated.py  room_control.py  search.py  submit.py
back/src/: config.py  main.py
back/src/api/: rooms.py  websocket.py
back/src/db/: __init__.py  database.py
back/src/games/: __init__.py  base.py  registry.py  router.py
back/src/games/guess_number/: __init__.py  game.py  schemas.py
back/src/games/guess_number/jobs/: __init__.py  timer.py
back/src/jobs/: __init__.py  base.py  game_timer.py  room_cleanup.py
back/src/models/: __init__.py  game_round.py  player.py  room.py
back/src/schemas/: __init__.py  game_round.py  player.py  room.py  websocket.py
back/src/services/: __init__.py  connection_manager.py  games_storage.py  room_service.py
back/tests/: conftest.py  test_db.py  test_game_registry.py  test_games_api.py  test_guess_number_timer.py  test_http.py  test_room_cleanup.py  test_room_service.py  test_rooms.py  test_search.py
docker/: Dockerfile  (+4 more)
(+169 files in other folders)
